<resources>
    <string name="app_name" translatable="false">Messenger</string>
    <string name="app_current_version" translatable="false">1.0</string>
    <string name="app_current_build" translatable="false">26M24</string>
    <string name="app_developer_name" translatable="false">Darkness</string>

    <string name="next">Next</string>
    <string name="welcome_text">Welcome! This app can help you to communicate with your needed people! Press Next button to pass the initial setup phase</string>
    <string name="first_let_s_create_account">First, let\'s create account</string>
    <string name="enter_your_login_or_email">Your Email</string>
    <string name="your_password">Your password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_have_account">I have account</string>
    <string name="i_have_not_account">I haven\'t account</string>
    <string name="it_s_time_for_questions_and_prefers">It\'s time for questions and prefers!</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="as_in_system">As in system</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="main_settings">Main Settings</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="goto_profile_settings"><![CDATA[Goto profile settings ->]]></string>
    <string name="appearance">Appearance</string>
    <string name="arrow" translatable="false"><![CDATA[>]]></string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback">Feedback</string>
    <string name="avatar">Avatar</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="saturation">Saturation</string>
    <string name="display_scroll_bars">Display scroll bars</string>
    <string name="use_sounds">Use sounds</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="summarize_your_feedback">Summarize your feedback</string>
    <string name="explain_it">Explain it</string>
    <string name="back">Back</string>
    <string name="you_can_rate_this_app">You can rate this app</string>
    <string name="rate">Rate</string>
    <string name="we_re_thank_you_for_your_feedback">We\'re thank you for your feedback</string>
    <string name="account">Account</string>
    <string name="email" translatable="false">Email</string>
    <string name="sample_email" translatable="false">mail.sample@gmail.com</string>
    <string name="change_email">Change Email</string>
    <string name="select_action">Select action</string>
    <string name="change_password">Change password</string>
    <string name="log_out_of_your_account">Log out of your account</string>
    <string name="delete_account">Delete account</string>
    <string name="reset_settings">Reset settings</string>
    <string name="do_you_want_restore_password_no_problem_follow_the_instruction">Do you want restore password? No problem! Follow the instruction</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="your_email">Your Email</string>
    <string name="changing_email">Changing Email</string>
    <string name="first_enter_your_new_email_address">First, enter your new Email address</string>
    <string name="new_email">New Email</string>
    <string name="go_back">Go back</string>
    <string name="changing_password">Changing password</string>
    <string name="default_elevation" translatable="false">10dp</string>
    <string name="i_m_forgot_my_password">I\'m forgot my password…</string>
    <string name="an_exception_has_occurred">An exception has occurred</string>
    <string name="well_lets_log_in">Well, then let’s log in</string>
    <string name="fill_in_this_field">Fill in this field</string>
    <string name="rate_this_app_using_slider">Rate app using slider</string>

    <string name="about_app">About app</string>
    <string name="rate_app">Rate app</string>
    <string name="change_theme">Change theme</string>
    <string name="sounds">Sounds</string>
    <string name="log_out">Log out</string>
    <string name="account_settings">Account settings</string>
    <string name="appearance_settings">Appearance settings</string>
    <string name="chat_settings">Chat settings</string>
    <string name="ok" translatable="false">OK</string>
    <string name="account_deleting_confirm">Do you really want to delete your account?</string>
    <string name="app_version">Version: </string>
    <string name="app_build">Build: </string>
    <string name="app_developer">Developer: </string>
    <string name="settings_app_name">App name: </string>
    <string name="registered_at">Registered at </string>
    <string name="set_offline_status">Set offline status</string>
    <string name="set_online_status">Set online status</string>
    <string name="conversations">Conversations</string>
    <string name="settings_reset_confirm">Do you really want to reset you settings?</string>
    <string name="wait_for_it">Wait for it…</string>
    <string name="info">Info</string>

    <string name="main_page_image_button_tag" translatable="false">Main Page</string>
    <string name="chat_page_image_button_tag" translatable="false">Chat Page</string>
    <string name="light_theme_radio_button_tag" translatable="false">Light Theme</string>
    <string name="dark_theme_radio_button_tag" translatable="false">Dark Theme</string>
    <string name="as_in_system_theme_radio_button_tag" translatable="false">As In System Theme</string>

    <string name="your_message">Your message</string>
    <string name="your_account_not_verified">Your account has not been verified. Check your email and confirm your account</string>
    <string name="or_enter_your_previous_password">Or enter your current password</string>
</resources>