<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:alpha="15"
        android:foreground="#D9D9D9"
        android:foregroundTint="@color/header_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="10dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/searchField"
            android:layout_width="169dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/text_field_background"
            android:drawableEnd="@drawable/search"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/search"
            android:elevation="10dp"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:alpha="15"
        android:foreground="#D9D9D9"
        android:foregroundTint="#26D9D9D9"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/mainButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/main"
            android:elevation="10dp"
            android:tag="@string/main_page_image_button_tag"
            app:srcCompat="@drawable/mainicon_button" />

        <ImageButton
            android:id="@+id/messengerButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/chat"
            android:elevation="10dp"
            android:tag="@string/chat_page_image_button_tag"
            app:srcCompat="@drawable/messenger_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/appearance"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout" />

    <ImageButton
        android:id="@+id/getBackImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout"
        app:srcCompat="@drawable/get_back"
         />

    <LinearLayout
        android:id="@+id/colorSettingsLinearLayout"
        android:layout_width="326dp"
        android:layout_height="148dp"
        android:layout_marginTop="28dp"
        android:foreground="@drawable/rectangle_background"
        android:orientation="vertical"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/contrast"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/contrastSlider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contrast"
                android:value="0"
                app:thumbColor="@color/white"
                app:trackColor="#083088"
                app:trackHeight="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/brightness"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/brightnessSlider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contrast"
                android:value="0"
                app:thumbColor="@color/white"
                app:trackColor="#083088"
                app:trackHeight="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/saturation"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/saturationSlider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contrast"
                android:value="0"
                app:thumbColor="@color/white"
                app:trackColor="#083088"
                app:trackHeight="8dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/themeSettingsLinearLayout"
        android:layout_width="326dp"
        android:layout_height="139dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSettingsLinearLayout">

        <RadioGroup
            android:id="@+id/themesRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/lightThemeInThemesRadioGroupRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2C2C3C"
                android:buttonTint="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:tag="@string/light_theme_radio_button_tag"
                android:text="@string/light"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/darkThemeInThemesRadioGroupRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2C2C3C"
                android:buttonTint="@color/white"
                android:checked="true"
                android:fontFamily="@font/montserrat_bold"
                android:tag="@string/dark_theme_radio_button_tag"
                android:text="@string/dark"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/asInSystemThemeInThemesRadioGroupRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2C2C3C"
                android:buttonTint="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:tag="@string/as_in_system_theme_radio_button_tag"
                android:text="@string/as_in_system"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:layout_marginStart="80dp"
            app:srcCompat="@drawable/theme"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scrollBarSettingsLinearLayout"
        android:layout_width="326dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeSettingsLinearLayout">

        <CheckBox
            android:id="@+id/showScrollBarsCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:backgroundTint="#2C2C3C"
            android:buttonTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/display_scroll_bars"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/scrollbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/soundsSettingsLinearLayout"
        android:layout_width="326dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_background"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollBarSettingsLinearLayout">

        <CheckBox
            android:id="@+id/useSoundsCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:backgroundTint="#2C2C3C"
            android:buttonTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/use_sounds"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/sounds" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>