<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.services.RestorePasswordActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="281dp"
        android:layout_height="95dp"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/do_you_want_restore_password_no_problem_follow_the_instruction"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_light_italic"
        android:text="@string/enter_your_email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <Button
        android:id="@+id/buttonNextWithEmail"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressTextField" />

    <EditText
        android:id="@+id/emailAddressTextField"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_field_background"
        android:drawableStart="@drawable/mail"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat_light_italic"
        android:text="@string/or_enter_your_previous_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNextWithEmail" />

    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/text_field_background"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonNextWithCurrentPassword"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>